version 1.7
-----------
 - new, accurate RGBA color similarity algorithm
 - change of optional SSE3 code to SSE2 that is always enabled on x86-64
 - optional OpenMP-based parallelisation of remapping
 - significantly improved performance thanks to custom partial sorting

version 1.6
-----------
 - novel dithering algorithm that doesn't add noise unless necessary
 - perceptual weighting of colors taking into account edges and noise
 - much faster remapping
 - improved portability, makefiles and man page

version 1.5
-----------
 - palettes postprocessed with Voronoi iteration
 - better RGBA color similarity algorithm and Floyd-Steinberg remapping
 - SSE optimisations

version 1.4
-----------
 - median cut is applied many times in a feedback loop
 - speed/quality trade-off option
 - faster remap of transparent areas

version 1.3
-----------
 - significant changes to the algorithm: use of variance
   to find largest dimensioin and to split most varying boxes
 - use of premultiplied alpha for color blending
 - conversion of output to gamma 2.2

version 1.2
-----------
 - color computation done in floating point
 - gamma correction applied
 - dropped support for very old systems & compilers

version 1.1
-----------
 - alpha-sensitive color reduction and dithering
 - support -- and - arguments in command line
 - number of colors optional (defaults to 256)
 - increased maximum number of colors in histogram

version 1.0
-----------
 - cleaned up Makefile.unx (better gcc optimizations, "clean" target)
 - recompiled binaries with zlib 1.1.4

version 0.95
------------
 - fixed Win32 filter bug (binary mode for stdin/stdout)
 - fixed cosmetic "choosing colors" verbosity buglet
 - fixed palette-size bug when number of colors in image < number requested
 - fixed sample-depth bug (png_set_packing() not retroactively smart)

version 0.91
------------
 - fixed some verbose/non-verbose oopers
 - fixed Win32 (MSVC) portability issues (getpid(), random(), srandom())